# assrender

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  assrender.sln  assrender.vcxproj  assrender.vcxproj.filters  assrender_with_latest_sdk.bat
lib/x86-32/: readme.txt
lib/x86-64/: readme.txt
msvc/lib/x64/: AviSynth.lib
msvc/lib/x86/: AviSynth.lib
src/: ASSRender.rc  CMakeLists.txt  assrender.c  assrender.def  assrender.h  render.c  render.h  sub.c  sub.h
